# bids-specification

./: .all-contributorsrc  .codecov.yml  .codespell_dict  .codespellrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .prettierrc  .remarkrc  .travis.yml  .tributors  .yamllint.yml  02-magnetoencephalography.md  03-modality-agnostic-files.md  BEP044_ Stimuli, organizing stimulus files and annotations in BIDS.md  CHANGES.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING-BIDS2.0.md  CONTRIBUTING.md  DECISION-MAKING.md  LICENSE  Maintainers_Guide.md  Makefile  Pipfile  README.md  Release_Guideline.md  Release_Protocol.md  TOC.md  Untitled.ipynb  atlas.json  bep-023_schema.json  bep023ValidatorConfig.json  book.toml  codespell_words.txt  (+23 more)
.circleci/: artifact_path  config.yml
.claude/skills/: proof-spec.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: announce_release.yml  automerge.yml  changelog_generator.yml  codespell.yml  (+17 more)
BIDS_logo/: BIDS_logo.eps  README  README.md  bids-animated.webm
Governance/: BIDS_Governance_Structure.md
circleci/: config.yml
citation/: mod.ts
datacite/: mod.ts
includes/: abbreviations.md
main/: __init__.py  macros.py  schema.py  utils.py
pdf_build_src/: README.md  build_pdf.sh  check_pandoc_log.py  cover.tex  header.tex  header_setup.tex  listings_setup.tex  metadata.yml  pandoc_script.py  process_markdowns.py  remove_admonitions.py  test_pdf_build.py  test_remove_admonitions.py
schemacode/: __init__.py  schema.py  utils.py
scripts/: test_tag
src/: 01-introduction.md  01_introduction.md  02-common-principles.md  02_common_principles.md  03-modality-agnostic-files.md  03_modality_agnostic_files.md  05-longitudinal-and-multi-site-studies.md  05_longitudinal_and_multi_site_studies.md  06-extensions.md  06-longitudinal-and-multi-site-studies.md  07-extensions.md  CHANGES.md  SUMMARY.md  TOC.md  atlas.md  common-principles.md  cover.tex  extensions.md  glossary.md  header.tex  index.md  introduction.md  longitudinal-and-multi-site-studies.md  metaschema.json  modality-agnostic-files.md  pregh-changes.md  provenance-context.json  references.bib  validate_schema.py
tmp/: BEP31_contributors.csv  bids_contributors.csv  contributed_commited_listed.csv  not_yet_listed.csv  not_yet_listed_contributed_to_unmerged_bep.csv
tools/: add_contributors.py  allcontrib_to_citation.py  announce_release.py  bids-schema  bids_contributors_no_email.csv  bids_contributors_old.tsv  bids_schema.py  check_contributor.py  check_embedded_json.py  contributors.tsv  csv_to_allcontrib.py  entities_order.py  filetree_example.ipynb  generate_entity_table  generate_entry_table  generate_glossary.py  maintainers_report.py  make_changelog.py  missing_from_tributor.py  new_contributors.tsv  no-bad-latin.py  no-bad-schema-paths.sh  parse_contributors.py  print_contributors.py  pull_files.py  rename_tributors_keys.py  requirements.txt  text2filetree.py  tmp.md  transfer_contrib.py  tributors_to_citation.py  update_tributors.py  utils.py  validate_citation.py
tools/schemacode/: .readthedocs.yaml  LICENSE  MANIFEST.in  MIGRATE.md  README.md  __init__.py  bep-023_schema.json  example.py  macros.py  pdm_build.py  pyproject.toml  readthedocs.yaml  requirements.txt  schema.py  setup.cfg  setup.py  tox.ini  utils.py  versioneer.py
tools/schemacode/bidsschematools/: __init__.py  __main__.py  _lazy.py  conftest.py  dataset.py  expressions.py  migrations.py  parse.py  render.py  rules.py  schema.py  utils.py  validate_schema.py  validator.py
tools/schemacode/bidsschematools/data/: __init__.py  metaschema.json  schema
tools/schemacode/bidsschematools/data/tests/: test_rules.py
tools/schemacode/bidsschematools/render/: __init__.py  tables.py  text.py  tsv.py  utils.py
tools/schemacode/bidsschematools/tests/: __init__.py  conftest.py  test_expressions.py  test_make_testdata.py  test_parse.py  test_render.py  test_render_tables.py  test_render_text.py  test_render_utils.py  test_rules.py  test_schema.py  test_utils.py  test_validate_metaschema.py  test_validator.py
tools/schemacode/bidsschematools/tests/cli/: test_render.py  test_schema.py  test_validator.py
tools/schemacode/bidsschematools/tests/data/: __init__.py
tools/schemacode/bidsschematools/types/: __init__.py  namespace.py
tools/schemacode/docs/: api.rst  bidsschematools.rst  conf.py  description.md  doc_to_schema.md  index.rst  make.bat  modules.rst  quickstart.md  requirements.txt
tools/schemacode/docs/_templates/: module.rst
tools/schemacode/schemacode/: __init__.py  _version.py  info.py  render.py  schema.py  utils.py  validator.py
tools/schemacode/schemacode/tests/: conftest.py  test_render.py  test_rules.py  test_schema.py  test_utils.py  test_validator.py
tools/schemacode/src/bidsschematools/: __init__.py  __main__.py  _lazytypes.py  _version.py  conftest.py  expressions.py  migrate.py  migrations.py  rules.py  schema.py  utils.py  validator.py
tools/schemacode/src/bidsschematools/data/: __init__.py  metaschema.json  schema
tools/schemacode/src/bidsschematools/data/tests/: test_rules.py
tools/schemacode/src/bidsschematools/render/: __init__.py  tables.py  text.py  tsv.py  utils.py
tools/schemacode/src/bidsschematools/render/templates/: common_principle.jinja  entity_definition.jinja  glossary.jinja
tools/schemacode/src/bidsschematools/tests/: test_expressions.py  test_make_testdata.py  test_migrate.py  test_migrate_cli.py  test_migrations.py  test_render_tables.py  test_render_text.py  test_rules.py  test_schema.py  test_utils.py  test_validator.py
tools/schemacode/src/bidsschematools/tests/data/: __init__.py  broken_dataset_description.json
tools/schemacode/src/bidsschematools/types/: __init__.py  _generator.py  context.py  namespace.py  protocols.py
tools/schemacode/tests/: test_context_types.py
tools/schemacode/tests/data/: .gitignore
(+1550 files in other folders)
