[project]
name = "bids-specification"
requires-python = ">=3.11"
dependencies = [
  "bidsschematools[render]",
  "mkdocs>=1.1.0",
  "mkdocs-material>=5.4",
  "pymdown-extensions>=7.0.0",
  "mkdocs-branchcustomization-plugin~=0.1.3",
  "mkdocs-macros-plugin",
  "mkdocs-redirects",
  "numpy",
]
dynamic = ["version"]

[tool.uv.sources]
bidsschematools = { path = "tools/schemacode", editable = true }

[dependency-groups]
doc = [
  "sphinx>=7.2.2",
  "furo",
  "myst_parser",
  "bidsschematools[expressions]",
]
