[project]
name = "bids-specification"
requires-python = ">=3.11"
dependencies = [
  "bidsschematools[render]",
  "mkdocs>=1.1.0",
  "mkdocs-material>=5.4",
  "pymdown-extensions>=9.2.0",
  "mkdocs-branchcustomization-plugin~=0.1.3",
  "mkdocs-macros-plugin",
  "mkdocs-redirects",
  "numpy",
]
dynamic = ["version"]

[tool.uv.sources]
bidsschematools = { path = "tools/schemacode", editable = true }

[dependency-groups]
doc = [
  "bidsschematools[expressions]",
  "sphinx>=7.2.2",
  "furo",
  "myst_parser",
  "myst-nb",
  "universal_pathlib",
  "fsspec[http]",
]
tools = [
  "cffconvert",
]

[tool.bumpversion]
current_version = "1.10.2-dev"
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:-(?P<pre_label>dev))?
"""
serialize = ["{major}.{minor}.{patch}-{pre_label}", "{major}.{minor}.{patch}"]
commit = true
message = "chore: Bump BIDS version to {new_version}"

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
[[tool.bumpversion.files]]
filename = "mkdocs.yml"
[[tool.bumpversion.files]]
filename = "src/schema/BIDS_VERSION"
[[tool.bumpversion.files]]
filename = "src/schema/meta/versions.yaml"
search = """NEXT_VERSION_HERE
- """
replace = """NEXT_VERSION_HERE
- '{new_version}'
- """
include_bumps = ['pre_label']

[[tool.mypy.overrides]]
module = ["pymdownx.*"]
ignore_missing_imports = true
