[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "bidsschematools"
description = " Python tools for working with the BIDS schema."
authors = [{name = "bids-standard developers"}]
maintainers = [{name = "bids-standard developers", email = " bids.maintenance@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "pyyaml",
    "jsonschema[format]"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dynamic = ["version"]

[project.optional-dependencies]
expressions = ["pyparsing"]
render = [
    "tabulate",
    "pandas",
    "markdown-it-py"
]
tests = [
    "bidsschematools[expressions,render]",
    "check-jsonschema",
    "codecov",
    "coverage[toml]",
    "flake8",
    "flake8-black",
    "flake8-isort",
    "pytest>6",
    "pytest-cov"
]
doc = [
    "sphinx>=1.5.3",
    "sphinx_rtd_theme"
]
all = [
    "bidsschematools[doc,tests]"
]

[project.scripts]
bst = "bidsschematools.__main__:cli"

[project.urls]
Homepage = "https://github.com/bids-standard/bids-specification"

[tool.setuptools.dynamic]
version = {file = "src/bidsschematools/data/schema/SCHEMA_VERSION"}

[tool.setuptools.package-data]
bidsschematools = [
    "data/metaschema.json",
    "data/schema/BIDS_VERSION",
    "data/schema/SCHEMA_VERSION",
    "data/schema/**/*.yaml",
    "tests/data/*"
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
log_cli = true
log_cli_level = "INFO"
markers = [
    "validate_schema: tests that validate the schema itself"
]
minversion = "6.0"
xfail_strict = true

[tool.coverage]

[tool.coverage.paths]
source = [
    "src/bidsschematools",
    "**/site-packages/bidsschematools"
]

[tool.coverage.run]
parallel = true

# Release process:
# cd tools/schemacode
# uvx bump-my-version bump pre_label --tag
# [inspect result]
# git push upstream <current-branch> --tags
# uvx bump-my-version bump <patch|minor|major>
# git push upstream <current-branch>
[tool.bumpversion]
current_version = "1.1.0-dev"
parse = """(?x)
    (?P<major>[0-9]+)
    \\.(?P<minor>[0-9]+)
    \\.(?P<patch>[0-9]+)
    (?:-(?P<pre_label>dev))?
"""
serialize = ["{major}.{minor}.{patch}-{pre_label}", "{major}.{minor}.{patch}"]
commit = true
message = "chore: Bump schema package to {new_version}"
# Use --tag on releases
tag = false
tag_name = "schema-{new_version}"
tag_message = "Schema release {new_version}"

[tool.bumpversion.parts.pre_label]
values = ["dev", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "../../src/schema/SCHEMA_VERSION"
