[metadata]
name = schemacode
version = file:schemacode/data/schema/SCHEMA_VERSION
url = https://github.com/bids-standard/schemacode
author = bids-standard developers
author_email = bids.maintenance@gmail.com
description = Python tools for working with the BIDS schema.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
install_requires =
    numpy
    pandas
    tabulate
    pyyaml
    importlib_resources; python_version < "3.9"
packages = find:
include_package_data = false
zip_safe = false

[options.extras_require]
doc =
    sphinx>=1.5.3
    sphinx_rtd_theme
tests =
    codecov
    coverage<5.0
    flake8>=3.7
    flake8-black
    flake8-isort
    pytest
    pytest-cov
all =
    %(doc)s
    %(tests)s

[options.package_data]
schemacode =
    data/schema/SCHEMA_VERSION
    data/schema/**/*.yaml

[versioneer]
VCS = git
style = pep440
versionfile_source = schemacode/_version.py
versionfile_build = schemacode/_version.py
tag_prefix = v
parentdir_prefix =

[flake8]
max-line-length = 99
exclude = *build/
ignore = E203,E402,E722,W503
per-file-ignores =
    */__init__.py : F401
docstring-convention = numpy

[tool:pytest]
log_cli = true
