[metadata]
name = bidsschematools
version = file:bidsschematools/data/schema/SCHEMA_VERSION
url = https://github.com/bids-standard/bids-specification
author = bids-standard developers
author_email = bids.maintenance@gmail.com
description = Python tools for working with the BIDS schema.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.9
install_requires =
    click
    pyyaml
    importlib_resources; python_version < "3.9"
    jsonschema
packages = find:
include_package_data = false
zip_safe = false

[options.extras_require]
doc =
    sphinx>=1.5.3
    sphinx_rtd_theme
render =
    tabulate
    pandas
    markdown-it-py
expressions =
    pyparsing
tests =
    codecov
    coverage[toml]
    flake8
    flake8-black
    flake8-isort
    pytest
    pytest-cov
all =
    %(doc)s
    %(render)s
    %(tests)s
    %(expressions)s

[options.package_data]
bidsschematools =
    data/metaschema.json
    data/schema/BIDS_VERSION
    data/schema/SCHEMA_VERSION
    data/schema/**/*.yaml
    tests/data/**/*
    tests/data/**/.bidsignore

[options.entry_points]
console_scripts =
    bst=bidsschematools.__main__:cli

[flake8]
max-line-length = 99
exclude = *build/
ignore = E203,E402,E722,W503
per-file-ignores =
    */__init__.py : F401
docstring-convention = numpy

[tool:pytest]
log_cli = true
